add common module